@@ -110,7 +110,7 @@ static inline void nxbe_pushrectangle(FAR struct nxbe_clipstack_s *stack,
 
   if ((stack->npushed + 1) > stack->mxrects)
     {
-      /* No then we will need to reallocate the stack to hole more */
+      /* No then we will need to reallocate the stack to hold more */
 
       int mxrects = stack->mxrects ? 2 * stack->mxrects : NX_INITIAL_STACKSIZE;
       struct nxbe_cliprect_s *newstack;
