@@ -88,6 +88,8 @@
 
 void nx_close(NXHANDLE handle)
 {
-  kfree(handle);
+  /* For consistency, we use the user-space allocate (if available) */
+
+  umm_free(handle);
 }
 
